--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test-storybook": "test-storybook",
+    "test-storybook:ci": "npx concurrently -k -s first -n \"STORYBOOK,TEST-STORYBOOK\" -c \"magenta,blue\" \"npx http-server public --port 7910 --silent\" \"npx wait-on tcp:7910 && test-storybook --url http://127.0.0.1:7910/storybook --config-dir config\"",
     "test": "vitest"
   },
   "dependencies": {
