--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test-storybook": "test-storybook",
-    "test-storybook:ci": "npx concurrently -k -s first -n \"STORYBOOK,TEST-STORYBOOK\" -c \"magenta,blue\" \"npx http-server public --port 7910 --silent\" \"npx wait-on tcp:7910 && test-storybook --url http://127.0.0.1:7910/storybook --config-dir config\"",
+    "test-storybook:ci": "concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"pnpm build-storybook --quiet && pnpm dlx http-server storybook-static --port 6006 --silent\" \"wait-on tcp:6006 && pnpm test-storybook\"",
     "test": "vitest"
   },
   "dependencies": {
